<resources>
    <string name="app_name">Car Share</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="booking_summary">Booking Summary</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="search">Search</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="drop_off_date">Drop-off Date</string>
    <string name="car_details">Model: Ford Model T\nMillage: 5000 miles\nPrice per day: $50\nDescription: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="book">Book</string>
    <string name="booking_details">Car model: Ford Model T\nPickup address: CN Tower\nPickup date: Oct 30th, 2022\nDrop-off date: Nov 11th, 2022</string>
    <string name="your_bookings">Your Bookings</string>
    <string name="todo">TODO</string>
    <string-array name="car_models_array">
        <item>Ford Model T</item>
        <item>Volkswagen Beetle</item>
        <item>Porsche 911</item>
        <item>Mercedes-Benz 300 S</item>
        <item>Lamborghini Countach</item>
        <item>Ferrari F40</item>
        <item>Lamborghini Miura</item>
        <item>Bugatti Veyron</item>
        <item>Mclaren F1</item>
        <item>Ferrari 250 GTO</item>
    </string-array>
</resources>